[package]
name = "starryparse"
version = "1.0.1"
authors=["Sibe <sibe at starssystems dot org>"]
edition="2024"
description="A light weight zero copy parsing library for rust focused on text parsing and span recovery."
repository="https://github.com/Xgames123/starryparse"
keywords=["parse", "zero-copy", "text", "span"]
categories=["parsing"]
license="Apache-2.0"

[dependencies]
miette={ version="7.6.0", optional=true }

[features]
miette=["dep:miette"]
